# P-GP2

./: Makefile  Makefile.am  README.md  config.h.in  config.status  configure.ac
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
gp2-1.0/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure
gp2-1.0/lib/: Makefile  graph.c  label.c
gp2-1.0/lib/.deps/: debug.Po  graphStacks.Po  label.Po  morphism.Po  parser.Po
gp2-1.0/src/: Makefile  Makefile.in  ast.h  common.h  genCondition.h  genProgram.c  genProgram.h  genRule.c  gp2  lexer.c  lexer.l  main.c  parser.c  parser.h  seman.c  seman.h  transform.c
gp2-1.0/src/.deps/: gp2-genLabel.Po  gp2-genProgram.Po  gp2-genRule.Po  gp2-main.Po  gp2-parser.Po  gp2-searchplan.Po  gp2-seman.Po  gp2-transform.Po
lib/: Makefile  Makefile.am  Makefile.in  common.c  common.h  graph.c  graph.h  graphStacks.c  lexer.c  lexer.l  morphism.c
lib/.deps/: graph.Po  lexer.Po  morphism.Po
programs/probabilistic/: g-n-p-sampler.gp2  karger-contraction-efficient.gp2  karger-contraction.gp2
programs/probabilistic/graphs/: fully-connected-4.host  fully-connected-5.host  karger-2-cut.host
src/: Makefile  ast.c  ast.h  common.h  genCondition.c  genCondition.h  genLabel.c  genLabel.h  genProgram.c  genProgram.h  genRule.c  genRule.h  gp2  lexer.c  lexer.l  main.c  parser.c  parser.h  parser.y  rule.c  rule.h  seman.c  transform.c
src/.deps/: gp2-ast.Po  gp2-error.Po  gp2-genCondition.Po  gp2-lexer.Po  gp2-pretty.Po  gp2-rule.Po  gp2-symbol.Po
